--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
-    <title>content_management_system</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <title>Dolare</title>
+</head>
+<body >
 
-  </body>
+<div id="app" ></div>
+<!-- built files will be auto injected -->
+
+</body>
 </html>
